--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,10 @@ Thumbs.db
 *.pdf
 *.csv
 
+# Sensitive data files
+Financial_Dashboard_Latest.xlsx
+~$Financial_Dashboard_Latest.xlsx
+
 # API keys and secrets (add any file that might contain API keys)
 *api_key*
 *secret*
